assets/css/_garage_filter.scss
.m-garage-filter {
  @include font-small;
  font-weight: 400;
  color: #525560;
  background: $white;
  border: 1px solid #b3b5bd;
  border-radius: 6px;

  &:hover {
    border: 1px solid #b58de2;
  }

  &:focus-within {
    border: 1px solid #7c47ae;
    box-shadow: 0px 0px 0px 2px rgba(170, 78, 242, 0.17);
  }
}

.m-garage-filter__header {
  border-bottom: 1px solid #d8dde1;
  height: 2.25rem;
  padding: 0 0.5rem 0 1rem;
  line-height: 1;
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
  user-select: none;
}

.m-garage-filter__show-hide-button {
  @include button-icon(0.68rem);
  transform: rotate(-90deg);
  width: 1.5rem;
  height: 1.5rem;
  display: flex;
  justify-content: center;
  align-items: center;

  span {
    svg {
      fill: #525560;
    }
  }

  &:focus-within {
    background-color: #ecedee;
    border-radius: 4px;
  }
}

.m-garage-filter__garages {
  margin: 0;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  row-gap: 0.5rem;
  color: #3c3f4c;
}

.m-garage-filter__garage {
  display: flex;
  justify-content: space-between;
}

.m-garage-filter__button {
  span {
    display: inline-block;
    width: 1.6875rem;
  }
}

